tests/ui/attributes/attrs-on-params.stderr
error: `#[inline]` attribute cannot be used on function params
  --> $DIR/attrs-on-params.rs:3:13
   |
LL | fn function(#[inline] param: u32) {
   |             ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: aborting due to 1 previous error

